cmake_minimum_required(VERSION 3.20)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 Part1/SimpleAdder.cpp)
#add_executable(1 Part1/StringIO.cpp)
#add_executable(1 Part1/DefaultValue.cpp)
#add_executable(1 Part1/InlineFunc.cpp)
#add_executable(1 Part1/NameSp.cpp)
#add_executable(1 Part1/NameSp2.cpp)
#add_executable(1 Part1/UsingDc.cpp)
